--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-Kivy==2.1.0
-kivymd==1.1.1
-matplotlib==3.6.2
-numpy==1.23.5
+Kivy==2.2.1
+kivymd==1.2.0
+matplotlib==3.7.2
+minimalmodbus==2.1.1
+numpy==1.25.1
+openpyxl==3.1.2
+pyserial==3.5
+scipy==1.12.0
